<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:layoutDescription="@xml/activity_main_scene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/white"
    >


<!--    ini bagian gambar-->

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:contentDescription="logo1"
        android:src="@drawable/plate"
        app:layout_constraintBottom_toTopOf="@+id/descMenu1"
        app:layout_constraintStart_toStartOf="@id/titleMenu1"
        app:layout_constraintEnd_toEndOf="@id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@id/titleMenu1"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginBottom="25dp"
        />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:contentDescription="logo2"
        android:src="@drawable/phone"
        app:layout_constraintBottom_toBottomOf="@id/descMenu2"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/titleMenu2"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="logo3"
        android:src="@drawable/pasat"
        android:scaleType="centerCrop"
        android:alpha="0"
        />

    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_1"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logoMenu1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintStart_toStartOf="@+id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_2"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2" />

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2" />


    <ImageView
        android:id="@+id/titleMenu3"
        android:src="@drawable/ic_eatright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"
        />

    <ImageView
        android:id="@+id/TopMenu3"
        android:src="@drawable/ic_besar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/titleMenu3"
        app:layout_constraintStart_toStartOf="@id/titleMenu3"
        app:layout_constraintEnd_toEndOf="@id/titleMenu3"
        android:alpha="0"
        />

    <ImageView
        android:id="@+id/descMenu3"
        android:src="@drawable/ic_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TopMenu3"
        app:layout_constraintStart_toStartOf="@+id/TopMenu3"
        app:layout_constraintEnd_toEndOf="@id/TopMenu3"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:alpha="0"
        />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/circle_fill_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/circle_24"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/circle_fill_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/circle_fill_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circle_24"/>

    <Button
        android:id="@+id/btn_selanjutnya"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:alpha="0"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/Selanjutnya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="600dp" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:textColor="@color/white"
        android:background="@color/prblm"
        android:text="@string/dafta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="150dp"
        />

    <TextView
        android:id="@+id/txtlewat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Skip"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/btn_selanjutnya"
        tools:layout_editor_absoluteX="181dp" />

<LinearLayout
    android:id="@+id/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/btn_masuk"
    app:layout_constraintEnd_toEndOf="@id/btn_masuk"
    app:layout_constraintTop_toBottomOf="@id/btn_masuk"
    android:alpha="0"
    >
    <TextView
        android:id="@+id/txt_norm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/txtmasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/masuk"
        android:textColor="@color/secondary_light"
        android:textStyle="bold"
        />
    </LinearLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>
